# django-allauth-react

./: LICENSE  README.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/accounts/login/: index.ts
frontend/src/api/accounts/logout/: index.ts
frontend/src/api/accounts/signup/: index.ts
frontend/src/api/auth/: index.ts
frontend/src/api/sessions/: hooks.ts  index.ts  types.ts
frontend/src/api/things/: index.ts
frontend/src/components/: AuthButtonGroup.tsx  LoginWithSocialButtton.tsx  LogoutButton.tsx  PrivateRoute.tsx  PublicOnlyRoute.tsx  SignupForm.tsx  SocialMethods.tsx
frontend/src/components/Body/: index.tsx
frontend/src/components/CrudBody/: index.tsx
frontend/src/components/LoginForm/: index.tsx
frontend/src/hooks/: useAuthSession.ts
frontend/src/store/generic/: index.ts  types.ts
frontend/src/store/sessions/: index.ts  types.ts
frontend/src/utils/: cookies.ts
server/: pyproject.toml
server/react_allauth/: asgi.py  manage.py  settings.py  urls.py
server/react_allauth/crud/: apps.py  models.py  serializers.py  urls.py  views.py
server/react_allauth/crud/migrations/: 0001_initial.py
server/react_allauth/react_allauth/: settings.py  urls.py  wsgi.py
